# FactorInterp

./: .gitignore  FactorInterp.cabal  Main.hs  TAGS
